2005-06-24 Yasuhiro Ohara  <yasu@sfc.wide.ad.jp>

	* ospf6_interface.c: fix the way inactivity_timer is called. Because
	  inactivity_timer() deletes the neighbor from the neighbor_list, it
	  cannot be called by thread_execute() from inner side of the
	  neighbor_list for-loop.

2005-05-31 Hasso Tepper <hasso at quagga.net>

	* ospf6d.c: No need for double ';'. Fixes parsing "show ipv6 ospf6
	  database ..." commands for vtysh by extract.pl. Remove duplicate
	  install_element calls.

2005-04-11 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ospf6_zebra.c (ospf6_zebra_redistribute, ospf6_zebra_no_redistribute):
	  Change 2nd arg to zebra_redistribute_send from zclient->sock
	  to zclient.

2005-04-07 Paul Jakma <paul@dishone.st>

	* (global) Fix up list loops to match changes in lib/linklist,
	  and some basic auditing of usage.
	* ospf6_abr.c: (ospf6_abr_examin_brouter) change to a single
	  scan of the area list, rather than scanning all areas first for
	  INTER_ROUTER and then again for INTER_NETWORK. According to
	  16.2, the scan should be area specific anyway, and further
	  ospf6d does not seem to implement 16.3 anyway.

2005-04-02 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ospf6_interface.[ch]: (ospf6_interface_lookup_by_name) Remove unused
	  function.

2005-04-02 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ospf6_zebra.c: (ospf6_zebra_if_del) Previously, this whole function
	  was commented out.  But this is not safe: we should at least update
	  the ifindex when the interface is deleted.  So the new version
	  updates the interface status and sets ifp->ifindex to
	  IFINDEX_INTERNAL.
	  (ospf6_zebra_route_update) Use if_indextoname properly.

2005-04-02 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ospf6_route.c: (ospf6_route_show, ospf6_route_show_detail) Protect
	  against the possibility that the string returned by if_indextoname
	  may not terminate with '\0'.

2005-03-02 Vincent Jardin <Vincent.Jardin@6wind.com>
